--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.2.1",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.3",
     "nanoid": "^3.1.20",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
