--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 SECRET=12345
-DATABASE=mongodb+srv://keepklincode:keepklin89@cluster0.1mkbgit.mongodb.net/
+DATABASE=mongodb+srv://keepklincode:keepklin89@cluster0.1mkbgit.mongodb.net/hospital
