--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Amadi Austin Chukwuemeka <rexsteroxy22@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
     "express-rate-limit": "^5.2.3",
