--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
@@ -31,6 +32,7 @@
     "mongoose": "^7.2.3",
     "nanoid": "^3.1.20",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.9.3",
     "pg": "^8.5.1",
     "rand-token": "^1.0.1",
     "sequelize": "^6.3.5",
